<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.weibo.weilibrary.BookActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bookname"
            android:id="@+id/bookname"
            android:layout_gravity="center_vertical|left"
            android:textSize="36dp"
            android:textStyle="bold"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/description"
            android:id="@+id/description"
            android:layout_gravity="center_vertical|left"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tag"
            android:id="@+id/tags"
            android:layout_gravity="center_vertical|left"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status"
            android:id="@+id/status"
            android:layout_gravity="center_vertical|left"
            android:textStyle="italic"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/owner"
            android:id="@+id/owner"
            android:layout_gravity="center_vertical|left"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/occupant"
            android:id="@+id/occupant"
            android:layout_gravity="center_vertical|left"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrow"
            android:id="@+id/borrow"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="28dp"/>

    <!--<Button-->
    <!--style="?android:attr/buttonStyleSmall"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="return"-->
    <!--android:id="@+id/return_to_book_list"-->
    <!--android:layout_gravity="center"/>-->

</LinearLayout>
