<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/关于"
            android:id="@+id/about"
            android:layout_gravity="right|center_vertical"
            />

    <TableLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            tools:context="com.weibo.weilibrary.HomeActivity">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/username"
                    android:id="@+id/username"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="36dp"/>

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/email"
                    android:id="@+id/email"
                    android:layout_column="0"
                    android:textSize="18dp"/>

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/bio"
                    android:id="@+id/bio"
                    android:layout_column="0"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tag"
                    android:id="@+id/tag"
                    android:layout_column="0"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/own"
                    android:id="@+id/booksnum"/>
        </TableRow>


    </TableLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/addbook"
                android:id="@+id/addbook"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allusers"
                android:id="@+id/allusers"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allbooks"
                android:id="@+id/allbooks"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>