<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookname"
            android:hint="@string/hint_bookname"
            android:layout_gravity="left|center_vertical"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tags"
            android:hint="@string/hint_tags"
            android:layout_gravity="left|center_vertical"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/hint_description"
            android:ems="10"
            android:id="@+id/description"
            android:layout_gravity="left|center_vertical"
            android:minLines="2"
            android:maxLines="5"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addbook"
            android:id="@+id/addbook"
            android:layout_gravity="center"/>
</LinearLayout>